--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,10 +16,10 @@ services:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
       KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://1.52.246.190:9092
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://<kafka_ip:port>
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
     entrypoint: >
-      bash -c "(/etc/confluent/docker/run & sleep 1 && kafka-topics --bootstrap-server 1.52.246.190:9092 --create --if-not-exists --topic github --partitions 3 --replication-factor 1 && wait)"
+      bash -c "(/etc/confluent/docker/run & sleep 1 && kafka-topics --bootstrap-server <kafka_ip:port> --create --if-not-exists --topic github --partitions 3 --replication-factor 1 && wait)"
     depends_on:
       - zookeeper
 
